# pythia-engine

./: .dockerignore  .env.sample  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  BEST_STRATEGY.md  BEST_STRATEGY_V2.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  PNL_REPORT.md  README.md  SWARM.md  TRADING_GUIDE.md  docker-compose.yml  fly.toml
.github/workflows/: refresh-snapshot.yml
apps/web/: .gitignore  .vercelignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  format.ts  paper.ts  portfolio.ts  router.ts  simulate.ts  swarm.ts  vis-data.ts
apps/web/public/: swarm-snapshot.json
apps/web/scripts/: bundle-snapshot.mjs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  routes.rs  state.rs
crates/backtest/: Cargo.toml
crates/backtest/examples/: debug_gates.rs  demo.rs
crates/backtest/src/: lib.rs  metrics.rs  synthetic.rs
crates/datasource/: Cargo.toml
crates/datasource/src/: bus.rs  events.rs  lib.rs  registry.rs
crates/domain/: Cargo.toml
crates/domain/src/: crypto.rs  ids.rs  lib.rs  market.rs  position.rs  signal.rs  time.rs  trader.rs
crates/econometrics/: Cargo.toml
crates/econometrics/src/: basic.rs  coint.rs  granger.rs  info_share.rs  lib.rs
crates/evaluation/: Cargo.toml
crates/evaluation/src/: bootstrap.rs  dsr.rs  lib.rs  pbo.rs  timing.rs
crates/exchange-hyperliquid/: Cargo.toml
crates/exchange-hyperliquid/src/: actions.rs  client.rs  lib.rs  signer.rs  types.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: budget.rs  config.rs  discovery.rs  lib.rs  pm.rs  signals.rs  source.rs
crates/ingest/tests/: integration.rs
crates/integrity/: Cargo.toml
crates/integrity/src/: lib.rs
crates/kiyotaka-client/: Cargo.toml
crates/kiyotaka-client/examples/: smoke.rs
crates/kiyotaka-client/src/: binance_ws.rs  dto.rs  error.rs  lib.rs  parsing.rs  rate.rs  ws.rs
crates/live-executor/: Cargo.toml
crates/live-executor/src/: aggregator.rs  engine.rs  lib.rs  risk.rs  state.rs
crates/paper-trader/: Cargo.toml
crates/paper-trader/src/: lib.rs
crates/polymarket-gamma/: Cargo.toml
crates/polymarket-gamma/src/: lib.rs
crates/portfolio/: Cargo.toml
crates/portfolio/src/: allocator.rs  lib.rs  vol_target.rs
crates/regime/: Cargo.toml
crates/regime/src/: lib.rs
crates/reports/: Cargo.toml
crates/reports/src/: backtest_report.rs  lib.rs  signal_report.rs
crates/signal-engine/: Cargo.toml
crates/signal-engine/src/: lib.rs  mapping.rs  state.rs  swp.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  queries.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: confluence.rs  lib.rs  registry.rs  runner.rs
crates/strategy/src/crypto_native/: baselines.rs  ensemble.rs  funding_arb.rs  funding_rev.rs  liq_fade.rs  liq_variants.rs  mod.rs  oi_div.rs  oi_momentum.rs  vol_bo.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: agent.rs  consensus.rs  evolution.rs  lib.rs  llm_agent.rs  persistence.rs  population.rs  scoring.rs  systematic.rs
crates/swarm/tests/: peerview_drives_decisions.rs
crates/tuner/: Cargo.toml
crates/tuner/src/: bounds.rs  gate.rs  lib.rs  llm.rs  proposal.rs
docs/: CRON_SETUP.md
fixtures/kiyotaka/: candles_btc_1h.json  funding_btc_24h.json  liq_btc_24h.json  oi_btc_24h.json  pm_leaderboard.json  pm_leaderboard_crypto.json  pm_leaderboard_politics.json  pm_market_summary.json  pm_positions_market.json  pm_positions_wallet.json  pm_trader_profile.json  pm_user_categories.json
reports/pnl/1776922672/: pnl.json  pnl.md
reports/pnl/1776924579/: pnl.json  pnl.md
reports/swarm/1777015617/: swarm.json  swarm.md
reports/swarm/1777024104/: swarm.json  swarm.md
reports/swarm/1777060778/: swarm.json  swarm.md
reports/swarm/1777102815/: swarm.json  swarm.md
reports/swarm/1777105018/: swarm.json  swarm.md
reports/swarm/1777106866/: swarm.json  swarm.md
reports/swarm/1777109063/: swarm.json  swarm.md
reports/swarm/1777109100/: swarm.json  swarm.md
reports/swarm/1777139444/: swarm.json  swarm.md
reports/swarm/1777146063/: swarm.json  swarm.md
reports/swarm/1777146075/: swarm.json  swarm.md
reports/swarm/1777146090/: swarm.json  swarm.md
reports/swarm/1777146222/: swarm.json  swarm.md
reports/swarm/1777146249/: swarm.json  swarm.md
reports/swarm/1777146261/: swarm.json  swarm.md
reports/swarm/1777146272/: swarm.json  swarm.md
reports/swarm/1777233215/: swarm.json  swarm.md
reports/swarm/1777233249/: swarm.json  swarm.md
reports/swarm/1777233265/: swarm.json  swarm.md
reports/swarm/1777233281/: swarm.json  swarm.md
reports/swarm/1777275373/: swarm.json  swarm.md
reports/swarm/1777275412/: swarm.json  swarm.md
reports/swarm/1777275429/: swarm.json  swarm.md
reports/swarm/1777276769/: swarm.json  swarm.md
reports/swarm/1777276794/: swarm.json  swarm.md
reports/swarm/1777276808/: swarm.json  swarm.md
reports/swarm/1777276821/: swarm.json  swarm.md
reports/swarm/1777276976/: swarm.json  swarm.md
reports/swarm/1777276998/: swarm.json  swarm.md
reports/swarm/1777277011/: swarm.json  swarm.md
reports/swarm/1777277025/: swarm.json  swarm.md
reports/swarm/1777277036/: swarm.json  swarm.md
reports/swarm/1777277223/: swarm.json  swarm.md
reports/swarm/1777277245/: swarm.json  swarm.md
reports/swarm/1777277251/: swarm.json  swarm.md
reports/swarm/1777277258/: swarm.json  swarm.md
reports/swarm/1777277265/: swarm.json  swarm.md
reports/swarm/1777277272/: swarm.json  swarm.md
reports/swarm/1777278358/: snapshot.json  swarm.json  swarm.md
reports/swarm/1777281666/: snapshot.json  swarm.json  swarm.md
reports/swarm/1777283137/: snapshot.json  swarm.json  swarm.md
reports/swarm/1777286480/: snapshot.json  swarm.json  swarm.md
reports/swarm/1777287233/: snapshot.json  swarm.json  swarm.md
reports/swarm/1777287408/: snapshot.json  swarm.json  swarm.md
reports/swarm/1777287690/: snapshot.json  swarm.json  swarm.md
reports/swarm/1777288288/: swarm.json  (+2 more)
scripts/: clean-runs.sh  prune-reports.sh  run.sh
(+4468 files in other folders)
