[package]
name = "backtest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
econometrics = { path = "../econometrics" }
signal-engine = { path = "../signal-engine" }
paper-trader = { path = "../paper-trader" }
reports = { path = "../reports" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
domain = { path = "../domain" }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "debug_gates"
path = "examples/debug_gates.rs"

[lints]
workspace = true
