[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
