[package]
name = "econometrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
nalgebra = { workspace = true }
statrs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
