[package]
name = "evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
