[package]
name = "exchange-hyperliquid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
