[package]
name = "ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
kiyotaka-client = { path = "../kiyotaka-client" }
polymarket-gamma = { path = "../polymarket-gamma" }
store = { path = "../store" }
signal-engine = { path = "../signal-engine" }
paper-trader = { path = "../paper-trader" }
evaluation = { path = "../evaluation" }
econometrics = { path = "../econometrics" }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
evaluation = { path = "../evaluation" }

[[bin]]
name = "scrape"
path = "src/bin/scrape.rs"

[lints]
workspace = true
