[package]
name = "integrity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
store = { path = "../store" }
polymarket-gamma = { path = "../polymarket-gamma" }
kiyotaka-client = { path = "../kiyotaka-client" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
