[package]
name = "kiyotaka-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
governor = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }

[[example]]
name = "smoke"
path = "examples/smoke.rs"

[features]
default = []
smoke-live = []

[lints]
workspace = true
