[package]
name = "live-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
kiyotaka-client = { path = "../kiyotaka-client" }
exchange-hyperliquid = { path = "../exchange-hyperliquid" }
paper-trader = { path = "../paper-trader" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

[[bin]]
name = "pythia-live"
path = "src/bin/pythia_live.rs"

[lints]
workspace = true
