[package]
name = "reports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
