[package]
name = "tuner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
portfolio = { path = "../portfolio" }
regime = { path = "../regime" }
reports = { path = "../reports" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[[bin]]
name = "pythia-tune"
path = "src/bin/pythia_tune.rs"

[lints]
workspace = true
